# punto

./: .gitignore  LICENSE  Makefile  README.md  WARP.md  build-deb.sh  config.yaml  install.sh  punto  punto-case-invert  punto-cli.sh  punto-invert  punto-switch  punto-switcher_2.0.0_amd64.deb  punto-switcher_2.1.0_amd64.deb  punto-switcher_2.2.0_amd64.deb  punto-switcher_2.3.0_amd64.deb  punto-switcher_2.3.1_amd64.deb  punto-switcher_2.4.0_amd64.deb  punto-switcher_2.5.0_amd64.deb  punto-switcher_2.5.1_amd64.deb  punto-switcher_2.6.0_amd64.deb  punto-switcher_2.7.0_amd64.deb  punto-switcher_2.7.1_amd64.deb  punto-switcher_2.7.2_amd64.deb  punto-switcher_2.7.3_amd64.deb  punto-switcher_2.7.4_amd64.deb  punto-switcher_2.7.5_amd64.deb  punto-switcher_2.8.0_amd64.deb  punto-switcher_2.8.1_amd64.deb  punto-switcher_2.8.2_amd64.deb  punto-switcher_2.8.3_amd64.deb  punto-switcher_2.8.4_amd64.deb  punto-translit  punto-tray.desktop  punto-ubuntu.deb  punto_ubuntu.deb  pyproject.toml  repo-c4.json  udevmon.yaml
.github/workflows/: ci.yml
DEBIAN/: control  postinst  prerm
cpp/: CMakeLists.txt
cpp/include/punto/: analysis_worker_pool.hpp  asm_utils.hpp  bloom_filter.hpp  clipboard_manager.hpp  concurrent_queue.hpp  config.hpp  control_plane_state.hpp  dictionary.hpp  event_loop.hpp  hasher.hpp  history_manager.hpp  input_buffer.hpp  ipc_client.hpp  ipc_server.hpp  key_entry_text.hpp  key_injector.hpp  layout_analyzer.hpp  layout_sync_sound.hpp  logger.hpp  macro_lock.hpp  ngram_data.hpp  runtime_tuning.hpp  scancode_map.hpp  settings_dialog.hpp  smart_bypass.hpp  sound_manager.hpp  system_input_settings.hpp  terminal_detection.hpp  text_processor.hpp  tray_app.hpp  types.hpp  typo_corrector.hpp  undo_detector.hpp  x11_session.hpp
cpp/src/: clipboard_manager.cpp  config.cpp  dictionary.cpp  event_loop.cpp  input_buffer.cpp  ipc_server.cpp  key_injector.cpp  layout_analyzer.cpp  logger.cpp  macro_lock.cpp  main.cpp  smart_bypass.cpp  sound_manager.cpp  terminal_detection.cpp  text_processor.cpp  typo_corrector.cpp  x11_session.cpp
cpp/src/tray/: ipc_client.cpp  main.cpp  settings_dialog.cpp  system_input_settings.cpp  tray_app.cpp
cpp/tests/: CMakeLists.txt  test_history_manager.cpp  test_main.cpp
packaging/: punto.service
packaging/DEBIAN/: control  postinst
punto/core/: clipboard.py  config.py  converters.py  detector.py  errors.py  layout.py  layout_utils.py  sound.py  window.py
punto/daemon/: analyzer.py  injector.py  input_handler.py  main.py  service.py
punto/gui/: settings.py  tray.py
scripts/: build_package.sh
src/: punto.c
