[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "punto-switcher"
version = "0.1.0"
description = "Linux Punto Switcher"
requires-python = ">=3.12"
dependencies = [
  "evdev>=1.6.1",
  "num2words>=0.5.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "hypothesis>=6.0.0",
]

gui = [
  "PyGObject>=3.42.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["punto*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
